Added remote url saving, with tests